[project]
name = "conditional-chains"
version = "0.1.0"
description = ""
authors = [
    {name = "Kashan Haider",email = "hkashan.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-google-genai (>=2.1.2,<3.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "pinecone[grpc] (>=6.0.2,<7.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "pinecone-text (>=0.10.0,<0.11.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
